mise en place animation coeur

--- a/Public/index.html
+++ b/Public/index.html
@@ -32,11 +32,11 @@
 						<h2>Fonctionnement</h2>
 						<div class="btn btn_fonctionnement">
 							<div class="fonction">
-								<div class="fc_circle">1</div><i class="fas fa-mobile-alt"></i>Choisissez un restaurant</div>
+								<div class="fc_circle">1</div><i class="fas fa-mobile-alt icon"></i>Choisissez un restaurant</div>
 						</div>  
 						<div class="btn btn_fonctionnement">
 							<div class="fonction">
-								<div class="fc_circle">2</div><i class="fas fas fa-list"></i>Composez votre menu</div>
+								<div class="fc_circle">2</div><i class="fas fas fa-list icon"></i>Composez votre menu</div>
 						</div>
 						<div class="btn btn_fonctionnement">
 							<div class="fonction">
@@ -51,39 +51,53 @@
                         <a href="./Pages/LaPalette.html">
                             <img alt="La palette du goût"   src="./images/resto1.jpg" class="img img_resto">
                             <div class="Resto_Description">
-                                    <div class="resto__nom"><strong>La palette du gout</strong></div>
-                                    <div class="resto__lieu">Menilmontant</div>
-                                    <div class ="coeur"><i class="far fa-heart" ></i></div>
+                                    <div class="nom"><strong>La palette du gout</strong></div>
+                                    <div class="lieu">Menilmontant</div>
+                            </div>
+                            <div class="Anim_coeur">
+                                <div class ="coeur"><i class="far fa-heart"></i></div>
+                                <div class ="coeur_plein"><i class="fas fa-heart" ></i></div>
                             </div>
                         </a>
-                    </div>                        
-                    <div class="Resto" >
+                    </div>  
+                         <div class="Resto" >
                         <a href="./pages/LaNote.html">
                             <img alt="La Note Enchantée"   src="./images/resto2.jpg" class="img img_resto">
                             <div class="Resto_Description">
-                                    <div class="resto_nom"><strong>La note еnсhantéе</strong></div>
-                                    <div class="resto_lieu">Charonne</div>
-                                    <div class ="coeur"><i class="far fa-heart" ></i></div>
+                                    <div class="nom"><strong>La note еnсhantéе</strong></div>
+                                    <div class="lieu">Charonne</div>
+                            </div>
+                            <div class="Anim_coeur">
+                                <div class ="coeur"><i class="far fa-heart"></i></div>
+                                <div class ="coeur_plein"><i class="fas fa-heart" ></i></div>
                             </div>
                         </a>
-                    </div>                        
+                    </div>  
+     
                     <div class="Resto" >
                         <a href="./pages/LaFrancaise.html">
                             <img alt="А la fгапçаisе"   src="./images/resto3.jpg" class="img img_resto">
                             <div class="Resto_Description">
-                                    <div class="resto_nom"><strong>A la française</strong></div>
-                                    <div class="resto_lieu">Cité rouge</div>
-                                    <div class ="coeur"><i class="far fa-heart" ></i></div>
+                                    <div class="nom"><strong>A la française</strong></div>
+                                    <div class="lieu">Cité rouge</div>
+                            </div>
+                            <div class="Anim_coeur">
+                                <div class ="coeur"><i class="far fa-heart"></i></div>
+                                <div class ="coeur_plein"><i class="fas fa-heart" ></i></div>
                             </div>
                         </a>
-                    </div>                    
+                    </div>  
+     
                     <div class="Resto" >
                         <a href="./Pages/LeDelice.html">
                             <img alt="Le délice des sens"   src="./images/resto4.jpg" class="img img_resto">
                             <div class="Resto_Description">
-                                    <div class="resto_nom"><strong>Le délice des sens</strong></div>
-                                    <div class="resto_lieu">Folie-Méricourt</div>
-                                    <div class ="coeur"><i class="far fa-heart"></i></div>
+                                    <div class="nom"><strong>Le délice des sens</strong></div>
+                                    <div class="lieu">Folie-Méricourt</div>
+                            </div>
+                            <div class="Anim_coeur">
+                                <div class ="coeur"><i class="far fa-heart"></i></div>
+                                <div class ="coeur_plein"><i class="fas fa-heart" ></i></div>
                             </div>
                         </a>
                      </div>  
