--- a/Public/pages/LaFrancaise.html
+++ b/Public/pages/LaFrancaise.html
@@ -24,23 +24,141 @@
             </div>
         </header> 
 		
-		
         <main>
             <img alt="A la française"   src="../images/resto3.jpg" class="img img_carte">
+            <section id="Carte">
+                <div class="titre_page">A la française
+                <div class ="coeur"><i class="far fa-heart"></i></div>
+                <div class ="coeur_plein"><i class="fas fa-heart"></i></div>
+                <div class="Menu">
+                    <article class='Entree'>
+                        <h2>ENTREES</h2>
+                        <div class="H2_souligner"></div>
+                            <div class="reference">
+                                <div class="reference_desc">
+                                    <h3>Tartare de poulpe acidulé</h3>
+                                    <h4>Aux zestes d'orange</h4>
+                                </div>
+                                <div class="reference_prix">
+                                    <span>25€</span>
+                                </div>
+                                <div class="Anim_reference">
+                                    <div class ="check"><i class="fas fa-check" ></i></div>    
+                                </div>
+                            </div>
+                            <div class="reference">
+                                <div class="reference_desc">
+                                    <h3>Velouté de légumes d'antan</h3>
+                                    <h4>Carotte, panais, topinambour</h4>
+                                </div>
+                                <div class="reference_prix">
+                                    <span>35€</span>
+                                </div>
+                                <div class="Anim_reference">
+                                    <div class ="check"><i class="fas fa-check" ></i></div>    
+                                </div>
+                            </div>
+                            <div class="reference">
+                                <div class="reference_desc">
+                                    <h3>Soupe à l'oignon</h3>
+                                    <h4>Revisitée</h4>
+                                </div>
+                                <div class="reference_prix">
+                                    <span>20€</span>
+                                </div>
+                                <div class="Anim_reference">
+                                    <div class ="check"><i class="fas fa-check" ></i></div>    
+                                </div>
+                            </div>
+                        </article>
+                    </div>
+                    <article class='Plat'>
+                        <h2>PLATS</h2>
+                        <div class="reference">
+                            <div class="reference_desc">
+                                <h3>Coquilles Saint-Jacques</h3>
+                                <h4>Accompagnées d'une purée de panais</h4>
+                            </div>
+                            <div class="reference_prix">
+                                <span>40€</span>
+                            </div>
+                            <div class="Anim_reference">
+                                <div class ="check"><i class="fas fa-check" ></i></div>    
+                            </div>
+                            <div class="reference">
+                                <div class="reference_desc">
+                                    <h3>Magret de canard</h3>
+                                    <h4>Et parmentier de pommes de terre</h4>
+                                </div>
+                                <div class="reference_prix">
+                                    <span>35€</span>
+                                </div>
+                                <div class="Anim_reference">
+                                    <div class ="check"><i class="fas fa-check" ></i></div>    
+                                </div>
+                            </div>
+                         </div>
+                         <div class="reference">
+                            <div class="reference_desc">
+                                <h3>Pigeonneau d’Ille-et-Vilaine</h3>
+                                <h4>Sur son lit de gnocchis aux légumes</h4>
+                            </div>
+                            <div class="reference_prix">
+                                <span>44€</span>
+                            </div>
+                            <div class="Anim_reference">
+                                <div class ="check"><i class="fas fa-check" ></i></div>    
+                            </div>
+                        </div>
 
-        <div class="menu">
-            <div class="titre_page">A la française
-                <div>
-                    <div class ="coeur"><i class="far fa-heart" ></i></div>
-                </div>
-            </div>
-
-            
+                    </article>
+                    <article class='Dessert'>
+                        <h2>DESSERTS</h2>
+                        <div class="reference">
+                            <div class="reference_desc">
+                                <h3>Pétales de violettes glacés</h3>
+                                <h4>Et purée de noisettes</h4>
+                            </div>
+                            <div class="reference_prix">
+                                <span>18€</span>
+                            </div>
+                            <div class="Anim_reference">
+                                <div class ="check"><i class="fas fa-check" ></i></div>    
+                            </div>
+                            <div class="reference">
+                                <div class="reference_desc">
+                                    <h3>Fondant au chocolat</h3>
+                                    <h4>Revisité</h4>
+                                </div>
+                                <div class="reference_prix">
+                                    <span>22€</span>
+                                </div>
+                                <div class="Anim_reference">
+                                    <div class ="check"><i class="fas fa-check" ></i></div>    
+                                </div>
+                            </div>
+                         </div>
+                         <div class="reference">
+                            <div class="reference_desc">
+                                <h3>Millefeuille croustillant</h3>
+                                <h4>Myrtilles et pâte d’amande</h4>
+                            </div>
+                            <div class="reference_prix">
+                                <span>23€</span>
+                            </div>
+                            <div class="Anim_reference">
+                                <div class ="check"><i class="fas fa-check"></i></div>    
+                            </div>
+                        </div>
+                    </article>
+                        <div class="btn btn_commander">Commander</div>     
+                </div>  
+            </section>
         </main>
         <footer>
-		<!-- voir pour mettre fonction footer-->
             <div class="footer">
-                <div class="titre_footer">ohmyfood</div>
+                <div class="titre_footer.
+                ">ohmyfood</div>
                 <ul>
                     <li><i class="fas fa-utensils"></i>Proposer un Restaurant</li>
                     <li><i class="fas fa-hands-helping"></i>Devenir partenaire</li>
