mise en forme des pages

--- a/Public/pages/LeDelice.html
+++ b/Public/pages/LeDelice.html
@@ -10,34 +10,142 @@
             crossorigin="anonymous"/>
         <meta name="viewport" content="width=device-width"/>
         <link rel="stylesheet" href="../css/style.css" />
+        <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Shrikhand&display=swap" rel="stylesheet">
         <title>Le délice des sens</title>
     </head>
        <body>
         
         <header >
             <div id="logo">
-                <img src="../images/ohmyfood@2x.svg" alt="logo"> 
-            </div>
-			<div>
-                <a href="../index.html"><i class="fas fa-arrow-left"> </i></a>
-            </div>
+                <img src="../images/ohmyfood@2x.svg" alt="logo">
+                <a href="../index.html"><i class="fas fa-arrow-left"> </i></a> 
+            </div>    
         </header> 
-		
 		
         <main>
             <img alt="Le délice des sens"   src="../images/resto4.jpg" class="img img_carte">
-
-        <div class="menu">
-            <div class="titre_page">Le délice des sens
-                <div>
-                    <div class ="coeur"><i class="far fa-heart" ></i></div>
+            <section id="Carte">
+                <div class="entete">
+                    <div class="titre_page">Le délice des sens
+                        <div class="Anim_coeur_page">
+                            <div class ="coeur"><i class="far fa-heart"></i></div>
+                            <div class ="coeur_plein"><i class="fas fa-heart" ></i></div>
+                        </div>     
                 </div>
-            </div>
 
-            
+                <div class="Menu">
+                    <article class='Entree'>
+                        <h2>ENTREES</h2>
+                        <div class="H2_souligner"></div>
+                            <div class="reference">
+                                <div class="reference_desc">
+                                    <h3>Tartare de thon</h3>
+                                    <h4>Assaisonné au yuzu</h4>
+                                </div>
+                                <div class="reference_prix"><span>25€</span></div>
+                                <div class="Anim_reference">
+                                    <i class="check fas fa-check-circle" ></i>    
+                                </div>
+                            </div>
+                            <div class="reference">
+                                <div class="reference_desc">
+                                    <h3>Bouchée de homard croustillant</h3>
+                                    <h4>Et sa farandole de petits légumes</h4>
+                                </div>
+                                <div class="reference_prix"><span>35€</span></div>
+                                <div class="Anim_reference">
+                                    <i class="check fas fa-check-circle" ></i>    
+                                </div>
+                            </div>
+                            <div class="reference">
+                                <div class="reference_desc">
+                                    <h3>Velouté de cèpes</h3>
+                                    <h4>Aux truffes</h4>
+                                </div>
+                                <div class="reference_prix"><span>20€</span></div>
+                                <div class="Anim_reference">
+                                    <i class="check fas fa-check-circle" ></i>    
+                                </div>
+                            </div>
+                        </article>
+                    </div>
+                    <article class='Plat'>
+                        <h2>PLATS</h2>
+                        <div class="H2_souligner"></div>
+                            <div class="reference">
+                                <div class="reference_desc">
+                                    <h3>Poulet rôti aux herbes de Provence</h3>
+                                    <h4>Et sa crème de truffe</h4>
+                                </div>
+                                <div class="reference_prix"><span>40€</span></div>
+                                <div class="Anim_reference">
+                                    <i class="check fas fa-check-circle" ></i>    
+                                </div>
+                            </div>
+                            <div class="reference">
+                                <div class="reference_desc">
+                                    <h3>Langouste rôtie</h3>
+                                    <h4>Et ses légumes de saison</h4>
+                                </div>
+                                <div class="reference_prix"><span>35€</span></div>
+                                <div class="Anim_reference">
+                                    <i class="check fas fa-check-circle" ></i>    
+                                </div>
+                            </div>
+                            <div class="reference">
+                                <div class="reference_desc">
+                                    <h3>Côte de boeuf Angus</h3>
+                                    <h4>Et sa purée de panais</h4>
+                                </div>
+                                <div class="reference_prix"><span>44€</span></div>
+                                <div class="Anim_reference">
+                                    <i class="check fas fa-check-circle" ></i>    
+                                </div>
+                            </div>
+                    </article>
+                    <article class='Dessert'>
+                        <h2>DESSERTS</h2>
+                        <div class="H2_souligner"></div>
+                        <div class="reference">
+                            <div class="reference_desc">
+                                <h3>Farandole de desserts</h3>
+                                <h4>Du chef</h4>
+                            </div>
+                            <div class="reference_prix"><span>18€</span></div>
+                            <div class="Anim_reference">
+                                <i class="check fas fa-check-circle" ></i>    
+                            </div>
+                        </div>
+                        <div class="reference">
+                            <div class="reference_desc">
+                                <h3>Crème brulée</h3>
+                                <h4>Revisité</h4>
+                            </div>
+                            <div class="reference_prix"><span>22€</span></div>
+                            <div class="Anim_reference">
+                                <i class="check fas fa-check-circle" ></i>   
+                            </div>
+                        </div>
+                        </div>
+                        <div class="reference">
+                            <div class="reference_desc">
+                                <h3>Tiramisu</h3>
+                                <h4>À la noisette</h4>
+                            </div>
+                            <div class="reference_prix"><span>23€</span></div>
+                            <div class="Anim_reference">
+                                <i class="check fas fa-check-circle" ></i>    
+                            </div>
+                        </div>
+                    </article>
+                    <div class="part_commander">
+                        <div class="btn btn_commander">Commander</div> 
+                    </div>    
+                </div>  
+            </section>
         </main>
+
         <footer>
-		<!-- voir pour mettre fonction footer-->
             <div class="footer">
                 <div class="titre_footer">ohmyfood</div>
                 <ul>
@@ -47,6 +155,6 @@
 					<li><a href="mailto:nadia.elmjiyad@gmail.com">Contact</a></li>
                 </ul>
             </div>
-        </footer> 
+        </footer>
     </body>
 </html>
