--- a/Public/pages/LaFrancaise.html
+++ b/Public/pages/LaFrancaise.html
@@ -5,31 +5,34 @@
         <meta charset="utf-8" />
         <link
             rel="stylesheet"
-            
             href="https://use.fontawesome.com/releases/v5.13.0/css/all.css"
             integrity="sha384-Bfad6CLCknfcloXFOyFnlgtENryhrpZCe29RTifKEixXQZ38WheV+i/6YWSzkz3V"
             crossorigin="anonymous"/>
         <meta name="viewport" content="width=device-width"/>
         <link rel="stylesheet" href="../css/style.css" />
+        <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Shrikhand&display=swap" rel="stylesheet">
         <title>A la française</title>
     </head>
        <body>
         
         <header >
             <div id="logo">
-                <img src="../images/ohmyfood@2x.svg" alt="logo"> 
-            </div>
-			<div>
-                <a href="../index.html"><i class="fas fa-arrow-left"> </i></a>
-            </div>
+                <img src="../images/ohmyfood@2x.svg" alt="logo">
+                <a href="../index.html"><i class="fas fa-arrow-left"> </i></a> 
+            </div>    
         </header> 
 		
         <main>
             <img alt="A la française"   src="../images/resto3.jpg" class="img img_carte">
             <section id="Carte">
-                <div class="titre_page">A la française
-                <div class ="coeur"><i class="far fa-heart"></i></div>
-                <div class ="coeur_plein"><i class="fas fa-heart"></i></div>
+                <div class="entete">
+                    <div class="titre_page">A la Française 
+                        <div class="Anim_coeur_page">
+                            <div class ="coeur"><i class="far fa-heart"></i></div>
+                            <div class ="coeur_plein"><i class="fas fa-heart" ></i></div>
+                        </div>     
+                </div>
+
                 <div class="Menu">
                     <article class='Entree'>
                         <h2>ENTREES</h2>
@@ -39,11 +42,9 @@
                                     <h3>Tartare de poulpe acidulé</h3>
                                     <h4>Aux zestes d'orange</h4>
                                 </div>
-                                <div class="reference_prix">
-                                    <span>25€</span>
-                                </div>
+                                <div class="reference_prix"><span>25€</span></div>
                                 <div class="Anim_reference">
-                                    <div class ="check"><i class="fas fa-check" ></i></div>    
+                                    <i class="check fas fa-check-circle" ></i>    
                                 </div>
                             </div>
                             <div class="reference">
@@ -51,11 +52,9 @@
                                     <h3>Velouté de légumes d'antan</h3>
                                     <h4>Carotte, panais, topinambour</h4>
                                 </div>
-                                <div class="reference_prix">
-                                    <span>35€</span>
-                                </div>
+                                <div class="reference_prix"><span>35€</span></div>
                                 <div class="Anim_reference">
-                                    <div class ="check"><i class="fas fa-check" ></i></div>    
+                                    <i class="check fas fa-check-circle" ></i>    
                                 </div>
                             </div>
                             <div class="reference">
@@ -63,102 +62,92 @@
                                     <h3>Soupe à l'oignon</h3>
                                     <h4>Revisitée</h4>
                                 </div>
-                                <div class="reference_prix">
-                                    <span>20€</span>
-                                </div>
+                                <div class="reference_prix"><span>20€</span></div>
                                 <div class="Anim_reference">
-                                    <div class ="check"><i class="fas fa-check" ></i></div>    
+                                    <i class="check fas fa-check-circle" ></i>    
                                 </div>
                             </div>
                         </article>
                     </div>
                     <article class='Plat'>
                         <h2>PLATS</h2>
-                        <div class="reference">
-                            <div class="reference_desc">
-                                <h3>Coquilles Saint-Jacques</h3>
-                                <h4>Accompagnées d'une purée de panais</h4>
-                            </div>
-                            <div class="reference_prix">
-                                <span>40€</span>
-                            </div>
-                            <div class="Anim_reference">
-                                <div class ="check"><i class="fas fa-check" ></i></div>    
+                        <div class="H2_souligner"></div>
+                            <div class="reference">
+                                <div class="reference_desc">
+                                    <h3>Coquilles Saint-Jacques</h3>
+                                    <h4>Accompagnées d'une purée de panais</h4>
+                                </div>
+                                <div class="reference_prix"><span>40€</span></div>
+                                <div class="Anim_reference">
+                                    <i class="check fas fa-check-circle" ></i>    
+                                </div>
                             </div>
                             <div class="reference">
                                 <div class="reference_desc">
                                     <h3>Magret de canard</h3>
                                     <h4>Et parmentier de pommes de terre</h4>
                                 </div>
-                                <div class="reference_prix">
-                                    <span>35€</span>
-                                </div>
+                                <div class="reference_prix"><span>35€</span></div>
                                 <div class="Anim_reference">
-                                    <div class ="check"><i class="fas fa-check" ></i></div>    
+                                    <i class="check fas fa-check-circle" ></i>    
                                 </div>
                             </div>
-                         </div>
-                         <div class="reference">
-                            <div class="reference_desc">
-                                <h3>Pigeonneau d’Ille-et-Vilaine</h3>
-                                <h4>Sur son lit de gnocchis aux légumes</h4>
+                            <div class="reference">
+                                <div class="reference_desc">
+                                    <h3>Pigeonneau d’Ille-et-Vilaine</h3>
+                                    <h4>Sur son lit de gnocchis aux légumes</h4>
+                                </div>
+                                <div class="reference_prix"><span>44€</span></div>
+                                <div class="Anim_reference">
+                                    <i class="check fas fa-check-circle" ></i>    
+                                </div>
                             </div>
-                            <div class="reference_prix">
-                                <span>44€</span>
-                            </div>
-                            <div class="Anim_reference">
-                                <div class ="check"><i class="fas fa-check" ></i></div>    
-                            </div>
-                        </div>
-
                     </article>
                     <article class='Dessert'>
                         <h2>DESSERTS</h2>
+                        <div class="H2_souligner"></div>
                         <div class="reference">
                             <div class="reference_desc">
                                 <h3>Pétales de violettes glacés</h3>
                                 <h4>Et purée de noisettes</h4>
                             </div>
-                            <div class="reference_prix">
-                                <span>18€</span>
-                            </div>
+                            <div class="reference_prix"><span>18€</span></div>
                             <div class="Anim_reference">
-                                <div class ="check"><i class="fas fa-check" ></i></div>    
+                                <i class="check fas fa-check-circle" ></i>    
                             </div>
-                            <div class="reference">
-                                <div class="reference_desc">
-                                    <h3>Fondant au chocolat</h3>
-                                    <h4>Revisité</h4>
-                                </div>
-                                <div class="reference_prix">
-                                    <span>22€</span>
-                                </div>
-                                <div class="Anim_reference">
-                                    <div class ="check"><i class="fas fa-check" ></i></div>    
-                                </div>
+                        </div>
+                        <div class="reference">
+                            <div class="reference_desc">
+                                <h3>Fondant au chocolat</h3>
+                                <h4>Revisité</h4>
                             </div>
-                         </div>
-                         <div class="reference">
+                            <div class="reference_prix"><span>22€</span></div>
+                            <div class="Anim_reference">
+                                <i class="check fas fa-check-circle" ></i>   
+                            </div>
+                        </div>
+                        </div>
+                        <div class="reference">
                             <div class="reference_desc">
                                 <h3>Millefeuille croustillant</h3>
                                 <h4>Myrtilles et pâte d’amande</h4>
                             </div>
-                            <div class="reference_prix">
-                                <span>23€</span>
-                            </div>
+                            <div class="reference_prix"><span>23€</span></div>
                             <div class="Anim_reference">
-                                <div class ="check"><i class="fas fa-check"></i></div>    
+                                <i class="check fas fa-check-circle" ></i>    
                             </div>
                         </div>
                     </article>
-                        <div class="btn btn_commander">Commander</div>     
+                    <div class="part_commander">
+                        <div class="btn btn_commander">Commander</div> 
+                    </div>    
                 </div>  
             </section>
         </main>
+
         <footer>
             <div class="footer">
-                <div class="titre_footer.
-                ">ohmyfood</div>
+                <div class="titre_footer">ohmyfood</div>
                 <ul>
                     <li><i class="fas fa-utensils"></i>Proposer un Restaurant</li>
                     <li><i class="fas fa-hands-helping"></i>Devenir partenaire</li>
@@ -166,6 +155,6 @@
 					<li><a href="mailto:nadia.elmjiyad@gmail.com">Contact</a></li>
                 </ul>
             </div>
-        </footer> 
+        </footer>
     </body>
 </html>
