--- a/Public/pages/LaPalette.html
+++ b/Public/pages/LaPalette.html
@@ -10,34 +10,142 @@
             crossorigin="anonymous"/>
         <meta name="viewport" content="width=device-width"/>
         <link rel="stylesheet" href="../css/style.css" />
+        <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Shrikhand&display=swap" rel="stylesheet">
         <title>La Palette du Goût</title>
     </head>
        <body>
         
         <header >
             <div id="logo">
-                <img src="../images/ohmyfood@2x.svg" alt="logo"> 
-            </div>
-			<div>
-                <a href="../index.html"><i class="fas fa-arrow-left"> </i></a>
-            </div>
+                <img src="../images/ohmyfood@2x.svg" alt="logo">
+                <a href="../index.html"><i class="fas fa-arrow-left"> </i></a> 
+            </div>    
         </header> 
-		
 		
         <main>
             <img alt="La Palette du Goût"   src="../images/resto1.jpg" class="img img_carte">
-
-        <div class="menu">
-            <div class="titre_page">La Palette du Goût
-                <div>
-                    <div class ="coeur"><i class="far fa-heart" ></i></div>
+            <section id="Carte">
+                <div class="entete">
+                    <div class="titre_page">La Palette du Goût 
+                        <div class="Anim_coeur_page">
+                            <div class ="coeur"><i class="far fa-heart"></i></div>
+                            <div class ="coeur_plein"><i class="fas fa-heart" ></i></div>
+                        </div>     
                 </div>
-            </div>
 
-            
+                <div class="Menu">
+                    <article class='Entree'>
+                        <h2>ENTREES</h2>
+                        <div class="H2_souligner"></div>
+                            <div class="reference">
+                                <div class="reference_desc">
+                                    <h3>Fricassée d'escargot</h3>
+                                    <h4>Au piment d'Espelette</h4>
+                                </div>
+                                <div class="reference_prix"><span>25€</span></div>
+                                <div class="Anim_reference">
+                                    <i class="check fas fa-check-circle" ></i>    
+                                </div>
+                            </div>
+                            <div class="reference">
+                                <div class="reference_desc">
+                                    <h3>Foie gras de canard mi-cuit</h3>
+                                    <h4>Et ses copeaux de truffe noire</h4>
+                                </div>
+                                <div class="reference_prix"><span>35€</span></div>
+                                <div class="Anim_reference">
+                                    <i class="check fas fa-check-circle" ></i>    
+                                </div>
+                            </div>
+                            <div class="reference">
+                                <div class="reference_desc">
+                                    <h3>Oeuf au plat</h3>
+                                    <h4>Assaisonné à la truffe sur lit de caviar</h4>
+                                </div>
+                                <div class="reference_prix"><span>20€</span></div>
+                                <div class="Anim_reference">
+                                    <i class="check fas fa-check-circle" ></i>    
+                                </div>
+                            </div>
+                        </article>
+                    </div>
+                    <article class='Plat'>
+                        <h2>PLATS</h2>
+                        <div class="H2_souligner"></div>
+                            <div class="reference">
+                                <div class="reference_desc">
+                                    <h3>Filet de boeuf aux herbes</h3>
+                                    <h4>Accompagné de sa ribambelle de légumes</h4>
+                                </div>
+                                <div class="reference_prix"><span>40€</span></div>
+                                <div class="Anim_reference">
+                                    <i class="check fas fa-check-circle" ></i>    
+                                </div>
+                            </div>
+                            <div class="reference">
+                                <div class="reference_desc">
+                                    <h3>Parmentier de queue de boeuf</h3>
+                                    <h4>À la truffe noire sur sa purée de panais</h4>
+                                </div>
+                                <div class="reference_prix"><span>35€</span></div>
+                                <div class="Anim_reference">
+                                    <i class="check fas fa-check-circle" ></i>    
+                                </div>
+                            </div>
+                            <div class="reference">
+                                <div class="reference_desc">
+                                    <h3>Filet de turbot</h3>
+                                    <h4>Aux agrumes</h4>
+                                </div>
+                                <div class="reference_prix"><span>44€</span></div>
+                                <div class="Anim_reference">
+                                    <i class="check fas fa-check-circle" ></i>    
+                                </div>
+                            </div>
+                    </article>
+                    <article class='Dessert'>
+                        <h2>DESSERTS</h2>
+                        <div class="H2_souligner"></div>
+                        <div class="reference">
+                            <div class="reference_desc">
+                                <h3>Paris-Brest</h3>
+                                <h4>Revisité</h4>
+                            </div>
+                            <div class="reference_prix"><span>18€</span></div>
+                            <div class="Anim_reference">
+                                <i class="check fas fa-check-circle" ></i>    
+                            </div>
+                        </div>
+                        <div class="reference">
+                            <div class="reference_desc">
+                                <h3>Macaron au chocolat d'exception</h3>
+                                <h4>ReviEt glace à la vanille de Madagascarsité</h4>
+                            </div>
+                            <div class="reference_prix"><span>22€</span></div>
+                            <div class="Anim_reference">
+                                <i class="check fas fa-check-circle" ></i>   
+                            </div>
+                        </div>
+                        </div>
+                        <div class="reference">
+                            <div class="reference_desc">
+                                <h3>Mousse au chocolat</h3>
+                                <h4>Au piment d'Espelette et à la truffe noire</h4>
+                            </div>
+                            <div class="reference_prix"><span>23€</span></div>
+                            <div class="Anim_reference">
+                                <i class="check fas fa-check-circle" ></i>    
+                            </div>
+                        </div>
+                    </article>
+                    <div class="part_commander">
+                        <div class="btn btn_commander">Commander</div> 
+                    </div>    
+                </div>  
+            </section>
         </main>
+
         <footer>
-		<!-- voir pour mettre fonction footer-->
             <div class="footer">
                 <div class="titre_footer">ohmyfood</div>
                 <ul>
@@ -47,6 +155,6 @@
 					<li><a href="mailto:nadia.elmjiyad@gmail.com">Contact</a></li>
                 </ul>
             </div>
-        </footer> 
+        </footer>
     </body>
 </html>
