gestion du responsive

--- a/Public/pages/LaFrancaise.html
+++ b/Public/pages/LaFrancaise.html
@@ -31,11 +31,12 @@
                             <div class ="coeur"><i class="far fa-heart"></i></div>
                             <div class ="coeur_plein"><i class="fas fa-heart" ></i></div>
                         </div>     
+                    </div>
                 </div>
 
                 <div class="Menu">
                     <article class='Entree'>
-                        <h2>ENTREES</h2>
+                        <h2>ENTREE</h2>
                         <div class="H2_souligner"></div>
                             <div class="reference">
                                 <div class="reference_desc">
@@ -68,7 +69,6 @@
                                 </div>
                             </div>
                         </article>
-                    </div>
                     <article class='Plat'>
                         <h2>PLATS</h2>
                         <div class="H2_souligner"></div>
@@ -103,6 +103,7 @@
                                 </div>
                             </div>
                     </article>
+
                     <article class='Dessert'>
                         <h2>DESSERTS</h2>
                         <div class="H2_souligner"></div>
@@ -126,7 +127,6 @@
                                 <i class="check fas fa-check-circle" ></i>   
                             </div>
                         </div>
-                        </div>
                         <div class="reference">
                             <div class="reference_desc">
                                 <h3>Millefeuille croustillant</h3>
@@ -138,9 +138,11 @@
                             </div>
                         </div>
                     </article>
+
                     <div class="part_commander">
                         <div class="btn btn_commander">Commander</div> 
-                    </div>    
+                    </div>  
+
                 </div>  
             </section>
         </main>
@@ -156,5 +158,6 @@
                 </ul>
             </div>
         </footer>
+
     </body>
 </html>
