--- a/Public/pages/LaPalette.html
+++ b/Public/pages/LaPalette.html
@@ -17,7 +17,10 @@
         
         <header >
             <div id="logo">
-                <img src="../images/ohmyfood@2x.svg" alt="logo">
+               <!-- <div class="logo_page">
+                    <img src="../images/ohmyfood@2x.svg" alt="logo">
+                </div> -->
+                <div class="titre_logo">ohmyfood</div>
                 <a href="../index.html"><i class="fas fa-arrow-left"> </i></a> 
             </div>    
         </header> 
@@ -26,7 +29,7 @@
             <img alt="La Palette du Goût"   src="../images/resto1.jpg" class="img img_carte">
             <section id="Carte">
                 <div class="entete">
-                    <div class="titre_page">La Palette du Goût 
+                    <div class="titre_page">La palette du goût 
                         <div class="Anim_coeur_page">
                             <div class ="coeur"><i class="far fa-heart"></i></div>
                             <div class ="coeur_plein"><i class="fas fa-heart" ></i></div>
@@ -41,7 +44,7 @@
                             <div class="reference">
                                 <div class="reference_desc">
                                     <h3>Fricassée d'escargot</h3>
-                                    <h4>Au piment d'Espelette</h4>
+                                    <h4>Au piment d'espelette</h4>
                                 </div>
                                 <div class="reference_prix"><span>25€</span></div>
                                 <div class="Anim_reference">
@@ -119,7 +122,7 @@
                         <div class="reference">
                             <div class="reference_desc">
                                 <h3>Macaron au chocolat d'exception</h3>
-                                <h4>ReviEt glace à la vanille de Madagascarsité</h4>
+                                <h4>Et glace à la vanille de Madagascar</h4>
                             </div>
                             <div class="reference_prix"><span>22€</span></div>
                             <div class="Anim_reference">
@@ -129,7 +132,7 @@
                         <div class="reference">
                             <div class="reference_desc">
                                 <h3>Mousse au chocolat</h3>
-                                <h4>Au piment d'Espelette et à la truffe noire</h4>
+                                <h4>Au piment d'espelette et à la truffe noire</h4>
                             </div>
                             <div class="reference_prix"><span>23€</span></div>
                             <div class="Anim_reference">
