--- a/Public/pages/LeDelice.html
+++ b/Public/pages/LeDelice.html
@@ -17,7 +17,7 @@
         
         <header >
             <div id="logo">
-                <img src="../images/ohmyfood@2x.svg" alt="logo">
+                <div class="titre_logo">ohmyfood</div>
                 <a href="../index.html"><i class="fas fa-arrow-left"> </i></a> 
             </div>    
         </header> 
